LinKreta_POC_Repository/force-app/main/default/objects/Industry_Leader_Mapping__c/Industry_Leader_Mapping__c.object-meta.xml
<CustomObject>
    <label>Industry Leader Mapping</label>
    <nameField>
        <label>Industry Leader Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Leader Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>