LinKreta_POC_Repository/force-app/main/default/objects/Industry_Leader_Mapping__c/fields/Industry_Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Industry_Business_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Business Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Industry_Leader_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>