LinKreta_POC_Repository/force-app/main/default/objects/Industry_Leader_Mapping__c/fields/Industry_Leader__c.field-meta.xml
<CustomField>
    <fullName>Industry_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Industry_Leader_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>