LinKreta_POC_Repository/force-app/main/default/objects/Industry_Leader_Mapping__c/fields/Original_Industry_Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Original_Industry_Business_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Industry Business Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Industry_Leader_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>