LinKreta_POC_Repository/force-app/main/default/objects/Industry_Leader_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Industry__c</columns>
    <columns>NAME</columns>
    <columns>Industry_Business_Partner__c</columns>
    <columns>Industry_Leader__c</columns>
    <columns>Original_Industry_Business_Partner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>